# SpaceShooter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
3rdlibs/: CMakeLists.txt
cmake/: CopyDLL.cmake
config/: config.toml
include/: EndScene.hpp  GameScene.hpp  StartScene.hpp  entity.hpp  game.hpp  pch.hpp  renderer.hpp  scenebase.hpp  windows.hpp
src/: EndScene.cpp  GameScene.cpp  StartScene.cpp  entity.cpp  game.cpp  main.cpp  renderer.cpp  scenebase.cpp  windows.cpp
